--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#8511f14c</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBlue">#FF1B24D8</color>
+    <color name="colorGreen">#85107c2d</color>
+    <color name="colorPurple">#857c1073</color>
+    <color name="colorWhite">#85fffcff</color>
+
 </resources>
