--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -1,135 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="77dp"
-        android:layout_height="39dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="281dp"
-        android:layout_marginRight="281dp"
-        android:text="TextView" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="148dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="26dp"
-        android:layout_marginRight="26dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:orientation="horizontal"
+        android:layout_weight="0.5"
+        android:gravity="center_vertical">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:text="@string/app_name"
+            android:textSize="40dp"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="103dp"
-        android:text="Button"
-        android:layout_alignLeft="@+id/textView" />
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:baselineAligned="false">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_weight="1"
+            android:baselineAligned="false">
 
-    <android.support.v7.widget.AppCompatImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="128dp"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="-42dp"
-        tools:srcCompat="@tools:sample/avatars[10]"
-        android:layout_alignRight="@+id/textView"
-        android:layout_marginRight="-42dp" />
+            <TextView
+                android:id="@+id/Principle_Amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20sp"
+                android:text="@string/principle_amount"
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="88dp"
-        android:layout_alignBottom="@+id/button"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="42dp"
-        android:layout_marginRight="42dp"
-        android:layout_marginBottom="-128dp"
-        tools:srcCompat="@tools:sample/avatars[4]" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/years"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20sp"
+                android:text="@string/years"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+            <TextView
+                android:id="@+id/Interest_Rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20sp"
+                android:text="@string/interest_rate"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:baselineAligned="false">
+
+            <EditText
+                android:id="@+id/PA_Bar"
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:hint='"$0.00"'
+                android:inputType="numberDecimal"
+                android:padding="20sp"
+                android:textAlignment="center"
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/year_bar"
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:hint='"time duration"'
+                android:inputType="numberDecimal"
+                android:padding="20sp"
+                android:textAlignment="center"
+                android:textSize="15sp" />
+
+            <EditText
+                android:id="@+id/IR_Bar"
+                android:layout_width="100sp"
+                android:layout_height="wrap_content"
+                android:hint='"%"'
+                android:inputType="numberDecimal"
+                android:padding="20sp"
+                android:textAlignment="center"
+                android:textSize="15sp" />
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="55dp"
-        android:layout_marginRight="55dp"
-        android:text="CheckBox" />
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
-    <RadioButton
-        android:id="@+id/radioButton"
-        android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_simpleInterest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:layout_weight="1"
+            android:text="@string/simple_interest" />
+
+        <Button
+            android:id="@+id/btn_compoundInterest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:layout_weight="1"
+            android:text="@string/compound_interest" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/imageView"
-        android:layout_alignRight="@id/imageView"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="175dp"
-        android:text="RadioButton" />
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:baselineAligned="false">
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="202dp"
-        android:layout_height="59dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="99dp"
-        android:layout_toStartOf="@+id/editText"
-        android:layout_toLeftOf="@id/editText"/>
+        <TextView
+            android:id="@+id/result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/calculated_interest"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
-    <GridView
-        android:id="@+id/gridView"
-        android:layout_width="123dp"
-        android:layout_height="55dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="250dp"
-        android:layout_marginRight="250dp"
-        android:layout_marginBottom="26dp" />
+        <TextView
+            android:id="@+id/t1"
+            android:layout_width="200sp"
+            android:layout_height="50sp"
+            android:background="@color/colorAccent"
+            android:gravity="center"
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="167dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="217dp"
-        android:layout_marginBottom="38dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="217dp" />
-
-    <DatePicker
-        android:id="@+id/datePicker"
-        android:layout_width="185dp"
-        android:layout_height="62dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="198dp"
-        android:layout_marginTop="358dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="198dp"></DatePicker>
-</RelativeLayout>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+    </LinearLayout>
+</LinearLayout>
